@@ -58,13 +58,11 @@ class QuickUploadCapableFileFactory(object):
         normalizer = component.getUtility(IIDNormalizer)
         chooser = INameChooser(self.context)
         newid = chooser.chooseName(normalizer.normalize(name), context)
+	# consolidation because it's different upon Plone versions     
+	newid = newid.replace('_','-').replace(' ','-').lower()
         if not title :
             # try to split filenames because we don't want 
             # big titles without spaces
-            title = name.split('.')[0].replace('_',' ').replace('-',' ')
-
-        if newid in context.objectIds() :
-            raise NameError, 'Object id %s always exist' %newid
         else :
             upload_lock.acquire()
             transaction.begin()
